--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-config==0.5.1
-python-dotenv==1.0.1
-Requests==2.31.0
+fastapi==0.89.1
+python-dotenv==0.21.1
+requests==2.22.0
+uvicorn==0.20.0
+gunicorn==20.1.0
